<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical">

        <Switch
            android:id="@+id/swSMSMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnSwitchSMSMonitor"
            android:text="@string/sms_monitor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/split" />

        <Switch
            android:id="@+id/swCallMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnSwitchCallMonitor"
            android:text="@string/call_monitor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/split" />

        <Switch
            android:id="@+id/swNotificationMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnSwitchNotificationMonitor"
            android:text="@string/notification_monitor" />

        <LinearLayout
            android:id="@+id/grNotificationMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="0dp">

            <CheckBox
                android:id="@+id/cbNotificationIgnoreOngoing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/notificationIgnoreOngoing" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/notificationInfoLevel" />

                <SeekBar
                    android:id="@+id/sbNotificationInfoLevel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:max="2"
                    android:progress="0" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notificationIgnoreList" />

            <EditText
                android:id="@+id/etNotificationIgnoreList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/notificationIgnoreList_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:visibility="visible" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/split" />

        <Switch
            android:id="@+id/swDoCopyPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copy_pin" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/split" />

        <Switch
            android:id="@+id/swDoNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_notification" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/split" />

        <Switch
            android:id="@+id/swDoToast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_toast" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"

            android:background="@color/split" />

        <Switch
            android:id="@+id/swSendToTelegram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnSwitchSendToTelegram"
            android:text="@string/send_to_telegram" />

        <LinearLayout
            android:id="@+id/grSendToTelegram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="0dp">

            <TextView
                android:id="@+id/tvTelegramHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etBotToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/bottoken_hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/etChatID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/chatid_hint"
                android:importantForAutofill="no"
                android:inputType="number" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/split" />

        <Switch
            android:id="@+id/swSendToServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnSwitchSendToServer"
            android:text="@string/send_to_server" />

        <LinearLayout
            android:id="@+id/grSendToServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="0dp">

            <EditText
                android:id="@+id/etURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/url_hint"
                android:importantForAutofill="no"
                android:inputType="textUri" />

            <EditText
                android:id="@+id/etHostPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="TextFields" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/split" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regexpfilter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regexpfilter_help"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/etRegexpFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/regexpfilter_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:visibility="visible" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/split" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whilelist" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="0dp">

            <EditText
                android:id="@+id/etWhiteList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/whitelist_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:visibility="visible" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/split" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sender_prefix" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="0dp">

            <EditText
                android:id="@+id/etSenderPrefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prefix_hint"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/split" />

        <TextView
            android:id="@+id/tvPermissionNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/notifyBk"
            android:onClick="onPermissionNotifyClick"
            android:padding="4dp"
            android:text=""
            android:textColor="@color/notifyFg" />

        <TextView
            android:id="@+id/tvNotificationNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/notifyBk"
            android:onClick="onNotificationNotifyClick"
            android:padding="4dp"
            android:text=""
            android:textColor="@color/notifyFg" />

        <TextView
            android:id="@+id/tvBatteryOptimizationNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/notifyBk"
            android:onClick="onBatteryOptimizationNotifyClick"
            android:padding="4dp"
            android:text=""
            android:textColor="@color/notifyFg" />

        <TextView
            android:id="@+id/tvAccessibilityNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/notifyBk"
            android:onClick="onAccessibilityNotifyClick"
            android:padding="4dp"
            android:text=""
            android:textColor="@color/notifyFg" />

        <Button
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnApplyClick"
            android:text="@string/apply"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnTestClick"
            android:text="@string/test"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>